# small_app

./: .gitignore  README.md  pyproject.toml
small_service/: app.py  config.py  database.py  utils.py
small_service/content/: models.py  repository.py  router.py  schemas.py  service.py
